--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="{{.BasePath}}static/favicon.ico">
-    <title>Coroot</title>
+    <title>codexray</title>
     <link rel="stylesheet" href="{{.BasePath}}static/css/roboto.css">
     <link rel="stylesheet" href="{{.BasePath}}static/css/mdi.css">
     <script>
-        window.coroot = {
+        window.codexray = {
             base_path: '{{.BasePath}}',
             version: '{{.Version}}',
             uuid: '{{.Uuid}}',
-            check_for_updates: {{.CheckForUpdates}},
+            check_for_updates: '{{.CheckForUpdates}}',
             edition: '{{.Edition}}',
         };
     </script>
 </head>
 <body>
 <noscript>
-    <strong>We're sorry but Coroot doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <strong>We're sorry but codexray doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <div id="app"></div>
 </body>
